# h5pp

./: .clang-format  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  build-and-test.sh  conanfile.py  conanfile.txt  license  package.sh  readme.md
cmake/: CPM.cmake  (+55 more)
cmake/cmake_dependency_provider/external_hdf5/: CMakeLists.txt  hdf5-link-public.patch.cmake
cmake/external_hdf5/: CMakeLists.txt  hdf5-1.12.1.patch  hdf5-config.patch.cmake  hdf5-link-public.patch.cmake  hdf5-link-target.patch.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  make.bat  requirements.txt
docs/doc_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/doc_source/: README.md  conf.py
docs/doc_source/api/: class_view_hierarchy.rst  classh5pp_1_1_file.rst  classh5pp_1_1hid_1_1h5e.rst  classh5pp_1_1hid_1_1h5s.rst  define_h5pp_eigen_8h_1ac12a222a6b122fd7afebaee98f31cdaa.rst  dir__home_david_GitProjects_h5pp_h5pp_include.rst  dir__home_david_GitProjects_h5pp_h5pp_include_h5pp_details.rst  enum_namespaceh5pp_1_1debug_1aaa5db3767959e8e59afc70a9339c4636.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppConstants.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppDimensionType.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppEigen.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppEnums.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppFile.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppFormat.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppHdf5.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppHid.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppHyperslab.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppInfo.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppLogger.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppScan.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppSpdlog.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppTypeCompound.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppTypeSfinae.h.rst  file__home_david_GitProjects_h5pp_h5pp_include_h5pp_details_h5ppUtils.h.rst  file_view_hierarchy.rst  (+97 more)
docs/source/: Doxyfile  api.md  conf.py  features.md  index.md  installation.md  introduction.md  usage.md
examples/: CMakeLists.txt  example-01a-int.cpp  example-01b-text.cpp  example-01c-struct-simple.cpp  example-01d-variable-length-array.cpp  example-02a-stdvector-double.cpp  example-02b-stdvector-text.cpp  example-02c-stdvector-complex.cpp  example-02d-stdvector-struct.cpp  example-02e-eigen-matrix.cpp  example-02f-pointer-to-data.cpp  example-02g-stdvector-stdarray.cpp  example-03a-attributes-readwrite.cpp  example-03a-attributes.cpp  example-03b-attributes-traverse.cpp  example-03b-tables.cpp  example-04a-compound-datatype-scalars.cpp  example-04a-custom-struct-easy.cpp  example-04b-compound-datatype-fixed-arrays.cpp  example-04b-custom-struct-advanced.cpp  example-04c-compound-datatype-variable-length-arrays.cpp  example-04c-compound-datatype-vlen-arrays.cpp  example-04c-tables.cpp  example-04d-tables-vlen-arrays.cpp  example-04d-tables.cpp  example-04e-tables-variable-length-arrays.cpp  example-05a-h5pp-dataset-info.cpp  example-05b-h5pp-attribute-info.cpp  example-05c-h5pp-table-info.cpp  example-06a-chunking-automatic-dims.cpp  example-06b-chunking-manual-dims.cpp  example-06c-chunking-compression.cpp  example-07a-copy-file.cpp  example-07b-move-file.cpp  example-07c-search-in-file.cpp  example-07d-copy-dset-file2file.cpp  example-08a-data-dimensions.cpp  example-08a-search-in-file.cpp  example-08b-write-hyperslab.cpp  example-08c-read-hyperslab.cpp  (+38 more)
examples/00_helloworld/: CMakeLists.txt  helloworld.cpp
examples/01_writescalar/: CMakeLists.txt  writescalar.cpp
examples/01write_scalar/: CMakeLists.txt  write_scalar.cpp
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/example5/: CMakeLists.txt  main.cpp
examples/example6/: CMakeLists.txt  main.cpp
examples/helloworld/: CMakeLists.txt  helloworld.cpp
examples/readme-example3/: main.cpp
examples/readme-example4/: main.cpp
examples/readme-example5/: CMakeLists.txt  main.cpp
examples/readme-example6/: CMakeLists.txt  main.cpp
h5pp/: CMakeLists.txt
h5pp/cmake/: FindPackageHDF5.cmake
tests/: CMakeLists.txt  all-tests.cmake  catch.hpp  test-appendToDataset.cpp  test-chunkDimension.cpp  test-compressedDataset.cpp  test-copyFile.cpp  test-copyLink.cpp  test-copySwap.cpp  test-directWrite.cpp  test-externalLinks.cpp  test-findObjects.cpp  test-functionCalls.cpp  test-implicitDefs.cpp  test-largeWrite.cpp  test-moveLink.cpp  test-overWrite.cpp  test-rawArrayWrapper.cpp  test-readOptional.cpp  test-readWrite.cpp  test-readWriteAttributes.cpp  test-readWriteTableFields.cpp  test-readWriteTables.cpp  test-readWriteText.cpp  test-simpleWrite.cpp  test-softLink.cpp  test-typeInfo.cpp  test-userType.cpp  test-userTypeVers.cpp
tests/chunkDimension/: CMakeLists.txt  chunkDimension.cpp
tests/compressedDataset/: CMakeLists.txt
tests/copySwap/: CMakeLists.txt  copySwap.cpp
tests/findObjects/: CMakeLists.txt  findObjects.cpp
tests/largeWrite/: CMakeLists.txt  largeWrite.cpp
tests/overWrite/: CMakeLists.txt  overWrite.cpp
tests/rawArrayWrapper/: CMakeLists.txt  rawArrayWrapper.cpp
tests/readWrite/: CMakeLists.txt  readWrite.cpp
tests/readWriteAttributes/: CMakeLists.txt  readWriteAttributes.cpp
tests/readWriteTables/: CMakeLists.txt  readWriteTables.cpp
tests/readWriteText/: CMakeLists.txt  readWriteText.cpp
tests/simpleWrite/: CMakeLists.txt  simpleWrite.cpp
tests/typeInfo/: CMakeLists.txt  typeInfo.cpp
tests/userType/: CMakeLists.txt  userType.cpp
(+1072 files in other folders)
