cmake_minimum_required(VERSION 3.12)
project(examples)
file(GLOB EXAMPLES "*.cpp")
add_custom_target(build-all-examples)
foreach (ex ${EXAMPLES})
    get_filename_component(example_src ${ex} NAME)
    get_filename_component(example_nwe ${ex} NAME_WE)
    add_executable(${example_nwe} ${example_src})
    target_link_libraries(${example_nwe} PRIVATE h5pp)
    if (MSVC)
           set_target_properties(${example_nwe} PROPERTIES LINK_FLAGS "/ignore:4099")
    endif()
    add_dependencies(build-all-examples ${example_nwe})
endforeach ()
